--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     *{ box-sizing:border-box }
     body{ margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif; background:var(--bg); color:var(--text); }
     a{ color:var(--accent) }
-
     .container{ max-width:1200px; margin:0 auto; padding:20px; }
 
     .topbar{ display:flex; gap:12px; align-items:center; justify-content:space-between; margin-bottom:16px; flex-wrap:wrap }
@@ -131,12 +130,12 @@
     <!-- NEWS -->
     <div id="view-news" class="panel">
       <div class="toolbar">
-        <!-- Filters popover -->
+        <!-- Filters popover (multi-select) -->
         <div class="popover" id="filtersPopover">
           <button class="filter-chip" id="filtersBtn">Filters <span class="meta" id="filtersCount">(All)</span></button>
           <div class="popover-panel">
             <div class="checks" id="catChecks">
-              <!-- checkboxes injected by JS -->
+              <!-- injected by JS -->
             </div>
             <div style="display:flex; gap:8px; justify-content:flex-end">
               <button class="btn" id="filtersClear">Clear</button>
@@ -152,6 +151,15 @@
         <label class="meta" style="display:flex;align-items:center;gap:6px">
           <input type="checkbox" id="autoRefresh" checked />
           Auto (60s)
+        </label>
+        <!-- Optional metrics toggles -->
+        <label class="meta" style="display:flex;align-items:center;gap:6px">
+          <input type="checkbox" id="showPct" checked />
+          Show % change
+        </label>
+        <label class="meta" style="display:flex;align-items:center;gap:6px">
+          <input type="checkbox" id="showRVOL" />
+          Show RVOL
         </label>
       </div>
 
@@ -172,6 +180,19 @@
         <input class="input" id="minRVOL" type="number" step="0.1" placeholder="Min RVOL (e.g. 1.5)"/>
         <input class="input" id="minMentions" type="number" step="1" placeholder="Min mentions (e.g. 2)"/>
         <button class="btn" id="rescore">Recalculate</button>
+        <!-- Optional metrics toggles -->
+        <label class="meta" style="display:flex;align-items:center;gap:6px">
+          <input type="checkbox" id="scanShowRVOL" />
+          Show RVOL
+        </label>
+        <label class="meta" style="display:flex;align-items:center;gap:6px">
+          <input type="checkbox" id="scanShowMentions" />
+          Show Mentions
+        </label>
+        <label class="meta" style="display:flex;align-items:center;gap:6px">
+          <input type="checkbox" id="scanShowChart" checked />
+          Show mini chart
+        </label>
       </div>
       <div id="scanner-grid" class="grid">
         <div class="card">Run a news load, then click Recalculate to see high-momentum movers.</div>
@@ -209,7 +230,7 @@
   <!-- Lightweight Charts -->
   <script src="https://unpkg.com/lightweight-charts@4.2.0/dist/lightweight-charts.standalone.production.js"></script>
   <script>
-    // ---------- STATE ----------
+    // ---------- CONSTANTS ----------
     const CATEGORIES = [
       ['medical','Medical / FDA'], ['patent','Patent / IP'], ['lawsuit','Lawsuit / Legal'],
       ['acquisition','Acquisition / M&A'], ['earnings','Earnings'], ['offering','Public Offering'],
@@ -217,12 +238,21 @@
       ['partnership','Partnership'], ['product','Product Launch'], ['sec','SEC Filing'], ['insider','Insider Activity']
     ];
     const RETAIN_DAYS = 7;
+
+    // ---------- STATE ----------
     let allNewsStore = new Map();  // id -> article
     let newsData = [];             // sorted derived
     let filteredNews = [];
     const stockCache = new Map();  // ticker -> { changePercent, change, ts }
     let selectedCats = new Set();  // multi-select categories
     let watchlist = new Set();
+
+    // optional metrics toggles (defaults)
+    let optShowPct = true;
+    let optShowRVOL = false;
+    let scanOptShowRVOL = false;
+    let scanOptShowMentions = false;
+    let scanOptShowChart = true;
 
     // ---------- CLOCK + SESSION ----------
     const etFmt = new Intl.DateTimeFormat('en-US',{ timeZone:'America/New_York', hour:'2-digit', minute:'2-digit' });
@@ -259,12 +289,28 @@
         const wl = JSON.parse(localStorage.getItem('watchlistV1')||'[]');
         for(const t of wl) watchlist.add(String(t).toUpperCase());
       } catch {}
+      try {
+        const prefs = JSON.parse(localStorage.getItem('metricPrefsV1')||'{}');
+        optShowPct = prefs.newsPct ?? true;
+        optShowRVOL = prefs.newsRVOL ?? false;
+        scanOptShowRVOL = prefs.scanRVOL ?? false;
+        scanOptShowMentions = prefs.scanMentions ?? false;
+        scanOptShowChart = prefs.scanChart ?? true;
+      } catch {}
     })();
     function persistStore(){
       try { localStorage.setItem('newsStoreV1', JSON.stringify(Array.from(allNewsStore.values()))); } catch {}
     }
     function persistWatchlist(){
       try { localStorage.setItem('watchlistV1', JSON.stringify(Array.from(watchlist.values()))); } catch {}
+    }
+    function persistMetricPrefs(){
+      try {
+        localStorage.setItem('metricPrefsV1', JSON.stringify({
+          newsPct: optShowPct, newsRVOL: optShowRVOL,
+          scanRVOL: scanOptShowRVOL, scanMentions: scanOptShowMentions, scanChart: scanOptShowChart
+        }));
+      } catch {}
     }
 
     // ---------- HELPERS ----------
@@ -315,7 +361,6 @@
 
     async function drawSparkline(el, ticker){
       try{
-        // show last session (or current) so you always see “today”
         let r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=180&last=1`);
         if (!r.ok) throw new Error('last session fetch failed');
         let payload = await r.json();
@@ -331,7 +376,7 @@
         const min=Math.min(...closes), max=Math.max(...closes);
         const xStep=(w-2*pad)/(closes.length-1);
         const y=v=> h-pad-((v-min)/(max-min||1))*(h-2*pad);
-        let d=''; closes.forEach((v,i)=>{ const x=pad+i*xStep; const yy=y(v); d+=(i?`L${x},${yy}`:`M${x},${yy}`); });
+        let d=''; closes.forEach((v,i)=>{ const x=pad+i+xStep; const yy=y(v); d+=(i?`L${x},${yy}`:`M${x},${yy}`); });
         const color = closes[closes.length-1]>=closes[0] ? '#24e39c' : '#ff5b6e';
         el.innerHTML = `<svg width="${w}" height="${h}" viewBox="0 0 ${w} ${h}"><path d="${d}" fill="none" stroke="${color}" stroke-width="2"/></svg>`;
       }catch{ el.innerHTML=''; }
@@ -363,7 +408,6 @@
       const params = new URLSearchParams();
       const t = (document.getElementById('ticker').value||'').trim();
       const k = (document.getElementById('keyword').value||'').trim();
-      // backend only accepts one category; if multiple selected, we pass none and filter client-side.
       if (t) params.set('ticker', t.toUpperCase());
       if (k) params.set('search', k);
 
@@ -395,7 +439,7 @@
       renderNews();
     }
 
-    // ---------- RENDER NEWS ----------
+    // ---------- RENDER NEWS (eager) ----------
     function renderNews(){
       const feed = document.getElementById('news-feed');
       if (!filteredNews.length){
@@ -407,12 +451,15 @@
         const when = n.publishedAt ? timeAgo(n.publishedAt) : '';
         const source = n.source ? n.source : '';
         const starred = watchlist.has(t) ? 'active' : '';
+        // optional metrics nodes (shown/hidden later)
+        const pctNode = `<span class="pct" data-optional="pct"><span class="arrow">⏳</span> <span class="val">…</span></span>`;
+        const rvolNode = `<span class="meta rvol" data-optional="rvol"></span>`;
         return `
           <div class="news-item">
             <div class="item-top">
               <a class="ticker" href="#" data-open-chart="${t}">${t || 'GENERAL'}</a>
-              <span class="pct"><span class="arrow">⏳</span> <span class="val">…</span></span>
-              <span class="meta rvol"></span>
+              ${pctNode}
+              ${rvolNode}
               <span class="src">${source ? source : ''}${when ? ` · ${when}` : ''}</span>
               <button class="star ${starred}" data-star="${t}">${starred?'★':'☆'}</button>
             </div>
@@ -426,40 +473,43 @@
         `;
       }).join('');
 
-      // hydrate each card lazily
-      const cards = feed.querySelectorAll('.news-item');
-      const io = new IntersectionObserver((entries)=>{
-        entries.forEach(async e=>{
-          if(!e.isIntersecting) return;
-          const card = e.target;
-          const t = (card.querySelector('.mini-chart')?.dataset?.ticker||'').toUpperCase();
-          if(!t || t==='GENERAL'){ io.unobserve(card); return; }
+      // show/hide optional metrics
+      document.querySelectorAll('[data-optional="pct"]').forEach(n=> n.style.display = optShowPct ? '' : 'none');
+      document.querySelectorAll('[data-optional="rvol"]').forEach(n=> n.style.display = optShowRVOL ? '' : 'none');
 
-          // % change
+      // hydrate each card
+      const cards = feed.querySelectorAll('.news-item');
+      cards.forEach(async (card)=>{
+        const t = (card.querySelector('.mini-chart')?.dataset?.ticker||'').toUpperCase();
+        if(!t || t==='GENERAL') return;
+
+        // % change
+        if (optShowPct){
           try{
             const q = await getQuote(t);
             if(q && typeof q.changePercent==='number'){
               const val = card.querySelector('.val');
               const arrow = card.querySelector('.arrow');
-              val.textContent = `${q.changePercent>0?'+':''}${q.changePercent.toFixed(2)}%`;
-              val.className = 'val ' + (q.changePercent>0?'up':'down');
-              arrow.textContent = q.changePercent>0 ? '↗' : '↘';
+              if (val){ val.textContent = `${q.changePercent>0?'+':''}${q.changePercent.toFixed(2)}%`; val.className = 'val ' + (q.changePercent>0?'up':'down'); }
+              if (arrow) arrow.textContent = q.changePercent>0 ? '↗' : '↘';
             }
           }catch{}
+        }
 
-          // RVOL
+        // RVOL
+        if (optShowRVOL){
           try{
             const rv = await getRVOL(t);
-            if (rv) card.querySelector('.rvol').textContent = `RVOL ${rv.toFixed(2)}x`;
+            if (rv){
+              const node = card.querySelector('.rvol');
+              if (node) node.textContent = `RVOL ${rv.toFixed(2)}x`;
+            }
           }catch{}
+        }
 
-          // sparkline
-          drawSparkline(card.querySelector('.mini-chart'), t);
-
-          io.unobserve(card);
-        });
-      }, { root:null, rootMargin:'200px', threshold:.01 });
-      cards.forEach(c=>io.observe(c));
+        // sparkline
+        drawSparkline(card.querySelector('.mini-chart'), t);
+      });
     }
 
     // ---------- SCANNER ----------
@@ -501,28 +551,35 @@
 
       const grid = document.getElementById('scanner-grid');
       if(!filt.length){ grid.innerHTML = `<div class="card">No results match the thresholds.</div>`; return; }
-      grid.innerHTML = filt.map(r=>`
-        <div class="card">
-          <div class="kpi">
-            <div>
-              <div style="font-weight:900">${r.ticker}</div>
-              <div class="meta">Mentions: ${r.mentions} · RVOL: ${r.rvol?r.rvol.toFixed(2):'—'} · Recency: ${r.recency.toFixed(0)}</div>
-            </div>
-            <div class="change ${r.pct>=0?'up':'down'}">${r.pct>=0?'↗':'↘'} ${r.pct.toFixed(2)}%</div>
-          </div>
-          <div class="mini-chart" data-ticker="${r.ticker}" style="margin-top:8px"></div>
-          <div class="meta" style="margin-top:6px">
-            <a href="#" data-open-chart="${r.ticker}">Open chart</a>
-            <button class="star ${watchlist.has(r.ticker)?'active':''}" data-star="${r.ticker}" style="margin-left:8px">${watchlist.has(r.ticker)?'★':'☆'}</button>
-          </div>
-        </div>
-      `).join('');
 
-      // auto draw charts
-      grid.querySelectorAll('.mini-chart').forEach(slot=>{
-        const t = slot.getAttribute('data-ticker');
-        if (t) drawSparkline(slot, t);
-      });
+      grid.innerHTML = filt.map(r=>{
+        const rvolHtml = scanOptShowRVOL ? ` · RVOL: ${r.rvol?r.rvol.toFixed(2):'—'}` : '';
+        const mentHtml = scanOptShowMentions ? ` · Mentions: ${r.mentions}` : '';
+        return `
+          <div class="card">
+            <div class="kpi">
+              <div>
+                <div style="font-weight:900">${r.ticker}</div>
+                <div class="meta">Recency: ${r.recency.toFixed(0)}${rvolHtml}${mentHtml}</div>
+              </div>
+              <div class="change ${r.pct>=0?'up':'down'}">${r.pct>=0?'↗':'↘'} ${r.pct.toFixed(2)}%</div>
+            </div>
+            ${scanOptShowChart ? `<div class="mini-chart" data-ticker="${r.ticker}" style="margin-top:8px"></div>` : ``}
+            <div class="meta" style="margin-top:6px">
+              <a href="#" data-open-chart="${r.ticker}">Open chart</a>
+              <button class="star ${watchlist.has(r.ticker)?'active':''}" data-star="${r.ticker}" style="margin-left:8px">${watchlist.has(r.ticker)?'★':'☆'}</button>
+            </div>
+          </div>
+        `;
+      }).join('');
+
+      // draw charts if enabled
+      if (scanOptShowChart){
+        grid.querySelectorAll('.mini-chart').forEach(slot=>{
+          const t = slot.getAttribute('data-ticker');
+          if (t) drawSparkline(slot, t);
+        });
+      }
     }
 
     // ---------- WATCHLIST ----------
@@ -531,7 +588,6 @@
       if(!key) return;
       if(watchlist.has(key)) watchlist.delete(key); else watchlist.add(key);
       persistWatchlist();
-      // update stars live
       document.querySelectorAll(`[data-star="${key}"]`).forEach(btn=>{
         const on = watchlist.has(key);
         btn.classList.toggle('active', on);
@@ -556,7 +612,6 @@
           </div>
         </div>
       `).join('');
-      // hydrate % + sparkline
       wrap.querySelectorAll('.wl-row').forEach(async row=>{
         const t = row.querySelector('.mini-chart').dataset.ticker;
         drawSparkline(row.querySelector('.mini-chart'), t);
@@ -611,7 +666,6 @@
       title.textContent = `${ticker} — intraday (1m)`;
       body.innerHTML = '';
 
-      // candles
       const r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=300&last=1`);
       const payload = await r.json();
       const candles = payload.candles||[];
@@ -632,7 +686,6 @@
       volSeries.setData(data.map(k=>({ time:k.time, value:k.volume, color: k.close>=k.open?'#24e39c':'#ff5b6e' })));
       chart.priceScale('').applyOptions({ scaleMargins:{ top:0.8, bottom:0 } });
 
-      // indicators with saved prefs
       let vwap=null,sma20=null,ema9=null,rsiPane=null;
       const checks = Array.from(document.querySelectorAll('.modal .ind'));
       const pref = getIndPrefs(); checks.forEach(ch=> ch.checked = !!pref[ch.value] || ch.checked);
@@ -717,6 +770,25 @@
     document.getElementById('run').addEventListener('click', ()=>fetchData());
     document.getElementById('manualRefresh').addEventListener('click', ()=>fetchData());
 
+    // optional metrics toggles hook-up
+    const showPctBox = document.getElementById('showPct');
+    const showRVOLBox = document.getElementById('showRVOL');
+    const scanShowRVOLBox = document.getElementById('scanShowRVOL');
+    const scanShowMentionsBox = document.getElementById('scanShowMentions');
+    const scanShowChartBox = document.getElementById('scanShowChart');
+
+    showPctBox.checked = optShowPct;
+    showRVOLBox.checked = optShowRVOL;
+    scanShowRVOLBox.checked = scanOptShowRVOL;
+    scanShowMentionsBox.checked = scanOptShowMentions;
+    scanShowChartBox.checked = scanOptShowChart;
+
+    showPctBox.addEventListener('change', ()=>{ optShowPct = showPctBox.checked; persistMetricPrefs(); renderNews(); });
+    showRVOLBox.addEventListener('change', ()=>{ optShowRVOL = showRVOLBox.checked; persistMetricPrefs(); renderNews(); });
+    scanShowRVOLBox.addEventListener('change', ()=>{ scanOptShowRVOL = scanShowRVOLBox.checked; persistMetricPrefs(); buildScanners(); });
+    scanShowMentionsBox.addEventListener('change', ()=>{ scanOptShowMentions = scanShowMentionsBox.checked; persistMetricPrefs(); buildScanners(); });
+    scanShowChartBox.addEventListener('change', ()=>{ scanOptShowChart = scanShowChartBox.checked; persistMetricPrefs(); buildScanners(); });
+
     // auto refresh
     let autoTimer = null;
     function setAutoRefresh(on){
@@ -736,7 +808,7 @@
       if(!v) return; watchlist.add(v); persistWatchlist(); renderWatchlist(); document.getElementById('wlAdd').value='';
     });
 
-    // ---------- INIT ----------
+    // init filters UI
     function initFiltersUI(){
       renderFilterChecks();
       document.getElementById('catChecks').addEventListener('change', (e)=>{
@@ -748,11 +820,12 @@
       });
     }
 
+    // ---------- INIT ----------
     async function init(){
       initFiltersUI();
       document.getElementById('news-feed').innerHTML = `<div class="loading">Fetching live financial news…</div>`;
       await fetchData();
-      buildScanners(); // first pass
+      buildScanners();
     }
     init();
   </script>
