--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     *{ box-sizing:border-box }
     body{ margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif; background:var(--bg); color:var(--text); }
     a{ color:var(--accent) }
+
     .container{ max-width:1200px; margin:0 auto; padding:20px; }
 
     .topbar{ display:flex; gap:12px; align-items:center; justify-content:space-between; margin-bottom:16px; flex-wrap:wrap }
@@ -51,7 +52,7 @@
     .btn{ cursor:pointer; }
     .meta{ color:var(--muted); font-size:.85rem }
 
-    /* Filters popover */
+    /* Filters popover (multi-select) */
     .filter-chip{ display:flex; align-items:center; gap:6px; padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:var(--chip); cursor:pointer }
     .popover{ position:relative; display:inline-block }
     .popover-panel{
@@ -63,6 +64,7 @@
     .checks{ display:grid; grid-template-columns:1fr 1fr; gap:6px 12px; margin:6px 0 10px }
     .checks label{ display:flex; gap:8px; align-items:center; color:var(--text); font-size:.9rem }
 
+    /* News list */
     .news-list{ display:grid; gap:12px; }
     .news-item{ border:1px solid var(--border); border-radius:12px; padding:12px; background:linear-gradient(180deg, rgba(32,39,58,.6), rgba(18,24,38,.9)); }
     .item-top{ display:flex; align-items:center; gap:10px; flex-wrap:wrap }
@@ -76,7 +78,7 @@
     .mini-chart{ width:220px; height:60px }
     .src{ color:var(--muted); font-size:.85rem }
 
-    /* Scanner */
+    /* Scanners */
     .grid{ display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:12px }
     .card{ background:var(--card); border:1px solid var(--border); border-radius:12px; padding:12px }
     .kpi{ display:flex; align-items:center; justify-content:space-between; gap:10px; flex-wrap:wrap }
@@ -130,13 +132,11 @@
     <!-- NEWS -->
     <div id="view-news" class="panel">
       <div class="toolbar">
-        <!-- Filters popover (multi-select) -->
+        <!-- Filters popover -->
         <div class="popover" id="filtersPopover">
           <button class="filter-chip" id="filtersBtn">Filters <span class="meta" id="filtersCount">(All)</span></button>
           <div class="popover-panel">
-            <div class="checks" id="catChecks">
-              <!-- injected by JS -->
-            </div>
+            <div class="checks" id="catChecks"><!-- injected by JS --></div>
             <div style="display:flex; gap:8px; justify-content:flex-end">
               <button class="btn" id="filtersClear">Clear</button>
               <button class="btn" id="filtersApply" style="background:var(--accent);border:1px solid rgba(255,255,255,.12);color:#fff">Apply</button>
@@ -361,6 +361,7 @@
 
     async function drawSparkline(el, ticker){
       try{
+        // Last session fallback so you always see "today" even when closed
         let r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=180&last=1`);
         if (!r.ok) throw new Error('last session fetch failed');
         let payload = await r.json();
@@ -376,7 +377,8 @@
         const min=Math.min(...closes), max=Math.max(...closes);
         const xStep=(w-2*pad)/(closes.length-1);
         const y=v=> h-pad-((v-min)/(max-min||1))*(h-2*pad);
-        let d=''; closes.forEach((v,i)=>{ const x=pad+i+xStep; const yy=y(v); d+=(i?`L${x},${yy}`:`M${x},${yy}`); });
+        let d='';
+        closes.forEach((v,i)=>{ const x=pad + i*xStep; const yy=y(v); d+=(i?`L${x},${yy}`:`M${x},${yy}`); });
         const color = closes[closes.length-1]>=closes[0] ? '#24e39c' : '#ff5b6e';
         el.innerHTML = `<svg width="${w}" height="${h}" viewBox="0 0 ${w} ${h}"><path d="${d}" fill="none" stroke="${color}" stroke-width="2"/></svg>`;
       }catch{ el.innerHTML=''; }
@@ -439,7 +441,35 @@
       renderNews();
     }
 
-    // ---------- RENDER NEWS (eager) ----------
+    // ---------- RENDER NEWS (eager w/ always-on mini charts) ----------
+    async function hydrateNewsCard(card, t){
+      // % change
+      if (optShowPct){
+        try{
+          const q = await getQuote(t);
+          if(q && typeof q.changePercent==='number'){
+            const val = card.querySelector('.val');
+            const arrow = card.querySelector('.arrow');
+            if (val){ val.textContent = `${q.changePercent>0?'+':''}${q.changePercent.toFixed(2)}%`; val.className = 'val ' + (q.changePercent>0?'up':'down'); }
+            if (arrow) arrow.textContent = q.changePercent>0 ? '↗' : '↘';
+          }
+        }catch{}
+      }
+      // RVOL
+      if (optShowRVOL){
+        try{
+          const rv = await getRVOL(t);
+          if (rv){
+            const node = card.querySelector('.rvol');
+            if (node) node.textContent = `RVOL ${rv.toFixed(2)}x`;
+          }
+        }catch{}
+      }
+      // sparkline (always)
+      const slot = card.querySelector('.mini-chart');
+      if (slot) drawSparkline(slot, t);
+    }
+
     function renderNews(){
       const feed = document.getElementById('news-feed');
       if (!filteredNews.length){
@@ -451,7 +481,6 @@
         const when = n.publishedAt ? timeAgo(n.publishedAt) : '';
         const source = n.source ? n.source : '';
         const starred = watchlist.has(t) ? 'active' : '';
-        // optional metrics nodes (shown/hidden later)
         const pctNode = `<span class="pct" data-optional="pct"><span class="arrow">⏳</span> <span class="val">…</span></span>`;
         const rvolNode = `<span class="meta rvol" data-optional="rvol"></span>`;
         return `
@@ -477,38 +506,12 @@
       document.querySelectorAll('[data-optional="pct"]').forEach(n=> n.style.display = optShowPct ? '' : 'none');
       document.querySelectorAll('[data-optional="rvol"]').forEach(n=> n.style.display = optShowRVOL ? '' : 'none');
 
-      // hydrate each card
-      const cards = feed.querySelectorAll('.news-item');
-      cards.forEach(async (card)=>{
+      // Hydrate all cards immediately (so mini-charts are always visible)
+      const cards = Array.from(feed.querySelectorAll('.news-item'));
+      cards.forEach(card=>{
         const t = (card.querySelector('.mini-chart')?.dataset?.ticker||'').toUpperCase();
         if(!t || t==='GENERAL') return;
-
-        // % change
-        if (optShowPct){
-          try{
-            const q = await getQuote(t);
-            if(q && typeof q.changePercent==='number'){
-              const val = card.querySelector('.val');
-              const arrow = card.querySelector('.arrow');
-              if (val){ val.textContent = `${q.changePercent>0?'+':''}${q.changePercent.toFixed(2)}%`; val.className = 'val ' + (q.changePercent>0?'up':'down'); }
-              if (arrow) arrow.textContent = q.changePercent>0 ? '↗' : '↘';
-            }
-          }catch{}
-        }
-
-        // RVOL
-        if (optShowRVOL){
-          try{
-            const rv = await getRVOL(t);
-            if (rv){
-              const node = card.querySelector('.rvol');
-              if (node) node.textContent = `RVOL ${rv.toFixed(2)}x`;
-            }
-          }catch{}
-        }
-
-        // sparkline
-        drawSparkline(card.querySelector('.mini-chart'), t);
+        hydrateNewsCard(card, t);
       });
     }
 
@@ -573,7 +576,7 @@
         `;
       }).join('');
 
-      // draw charts if enabled
+      // draw charts if enabled; use last=1 fallback in drawSparkline()
       if (scanOptShowChart){
         grid.querySelectorAll('.mini-chart').forEach(slot=>{
           const t = slot.getAttribute('data-ticker');
