--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     *{ box-sizing:border-box }
     body{ margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif; background:var(--bg); color:var(--text); }
     a{ color:var(--accent) }
-
     .container{ max-width:1200px; margin:0 auto; padding:20px; }
 
     .topbar{ display:flex; gap:12px; align-items:center; justify-content:space-between; margin-bottom:16px; flex-wrap:wrap }
@@ -52,7 +51,7 @@
     .btn{ cursor:pointer; }
     .meta{ color:var(--muted); font-size:.85rem }
 
-    /* Filters popover (multi-select) */
+    /* Filters popover */
     .filter-chip{ display:flex; align-items:center; gap:6px; padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:var(--chip); cursor:pointer }
     .popover{ position:relative; display:inline-block }
     .popover-panel{
@@ -64,7 +63,6 @@
     .checks{ display:grid; grid-template-columns:1fr 1fr; gap:6px 12px; margin:6px 0 10px }
     .checks label{ display:flex; gap:8px; align-items:center; color:var(--text); font-size:.9rem }
 
-    /* News list */
     .news-list{ display:grid; gap:12px; }
     .news-item{ border:1px solid var(--border); border-radius:12px; padding:12px; background:linear-gradient(180deg, rgba(32,39,58,.6), rgba(18,24,38,.9)); }
     .item-top{ display:flex; align-items:center; gap:10px; flex-wrap:wrap }
@@ -78,7 +76,7 @@
     .mini-chart{ width:220px; height:60px }
     .src{ color:var(--muted); font-size:.85rem }
 
-    /* Scanners */
+    /* Scanner */
     .grid{ display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:12px }
     .card{ background:var(--card); border:1px solid var(--border); border-radius:12px; padding:12px }
     .kpi{ display:flex; align-items:center; justify-content:space-between; gap:10px; flex-wrap:wrap }
@@ -132,7 +130,7 @@
     <!-- NEWS -->
     <div id="view-news" class="panel">
       <div class="toolbar">
-        <!-- Filters popover -->
+        <!-- Filters popover (multi-select) -->
         <div class="popover" id="filtersPopover">
           <button class="filter-chip" id="filtersBtn">Filters <span class="meta" id="filtersCount">(All)</span></button>
           <div class="popover-panel">
@@ -359,29 +357,55 @@
       return m.volume / m.avgVolume;
     }
 
+    // *** FIXED sparkline: works closed hours via last-session -> 5m -> daily ***
     async function drawSparkline(el, ticker){
+      if (!el || !ticker || ticker === 'GENERAL' || !/^[A-Z]{1,5}$/.test(ticker)) {
+        el.innerHTML = ''; 
+        return;
+      }
       try{
-        // Last session fallback so you always see "today" even when closed
         let r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=180&last=1`);
-        if (!r.ok) throw new Error('last session fetch failed');
-        let payload = await r.json();
-        let candles = payload.candles || [];
+        let ok = r.ok; 
+        let payload = ok ? await r.json() : { candles: [] };
+        let candles = payload?.candles || [];
+
         if (candles.length < 2) {
-          r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=180`);
-          payload = await r.json();
-          candles = payload.candles || [];
+          r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=5min&limit=180&last=1`);
+          ok = r.ok; payload = ok ? await r.json() : { candles: [] };
+          candles = payload?.candles || [];
         }
+        if (candles.length < 2) {
+          r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=day&limit=60&last=1`);
+          ok = r.ok; payload = ok ? await r.json() : { candles: [] };
+          candles = payload?.candles || [];
+        }
+
+        if (!Array.isArray(candles) || candles.length < 2) {
+          el.innerHTML = '';
+          return;
+        }
+
         const closes = candles.map(c=>c.c);
-        if(closes.length<2){ el.innerHTML=''; return; }
-        const w=el.clientWidth||220, h=el.clientHeight||60, pad=5;
-        const min=Math.min(...closes), max=Math.max(...closes);
-        const xStep=(w-2*pad)/(closes.length-1);
-        const y=v=> h-pad-((v-min)/(max-min||1))*(h-2*pad);
-        let d='';
-        closes.forEach((v,i)=>{ const x=pad + i*xStep; const yy=y(v); d+=(i?`L${x},${yy}`:`M${x},${yy}`); });
-        const color = closes[closes.length-1]>=closes[0] ? '#24e39c' : '#ff5b6e';
-        el.innerHTML = `<svg width="${w}" height="${h}" viewBox="0 0 ${w} ${h}"><path d="${d}" fill="none" stroke="${color}" stroke-width="2"/></svg>`;
-      }catch{ el.innerHTML=''; }
+        const w = el.clientWidth || 220, h = el.clientHeight || 60, pad = 5;
+        const min = Math.min(...closes), max = Math.max(...closes);
+        const xStep = (w - 2*pad) / (closes.length - 1);
+        const y = v => h - pad - ((v - min) / (max - min || 1)) * (h - 2*pad);
+
+        let d = '';
+        closes.forEach((v, i) => {
+          const x = pad + i * xStep;     // <— critical fix
+          const yy = y(v);
+          d += (i ? `L${x},${yy}` : `M${x},${yy}`);
+        });
+
+        const color = closes[closes.length - 1] >= closes[0] ? '#24e39c' : '#ff5b6e';
+        el.innerHTML = `<svg width="${w}" height="${h}" viewBox="0 0 ${w} ${h}">
+          <path d="${d}" fill="none" stroke="${color}" stroke-width="2"/>
+        </svg>`;
+      }catch(err){
+        console.error('sparkline error', ticker, err);
+        el.innerHTML = '';
+      }
     }
 
     // ---------- FILTER UI ----------
@@ -441,35 +465,7 @@
       renderNews();
     }
 
-    // ---------- RENDER NEWS (eager w/ always-on mini charts) ----------
-    async function hydrateNewsCard(card, t){
-      // % change
-      if (optShowPct){
-        try{
-          const q = await getQuote(t);
-          if(q && typeof q.changePercent==='number'){
-            const val = card.querySelector('.val');
-            const arrow = card.querySelector('.arrow');
-            if (val){ val.textContent = `${q.changePercent>0?'+':''}${q.changePercent.toFixed(2)}%`; val.className = 'val ' + (q.changePercent>0?'up':'down'); }
-            if (arrow) arrow.textContent = q.changePercent>0 ? '↗' : '↘';
-          }
-        }catch{}
-      }
-      // RVOL
-      if (optShowRVOL){
-        try{
-          const rv = await getRVOL(t);
-          if (rv){
-            const node = card.querySelector('.rvol');
-            if (node) node.textContent = `RVOL ${rv.toFixed(2)}x`;
-          }
-        }catch{}
-      }
-      // sparkline (always)
-      const slot = card.querySelector('.mini-chart');
-      if (slot) drawSparkline(slot, t);
-    }
-
+    // ---------- RENDER NEWS (eager mini-charts) ----------
     function renderNews(){
       const feed = document.getElementById('news-feed');
       if (!filteredNews.length){
@@ -506,12 +502,32 @@
       document.querySelectorAll('[data-optional="pct"]').forEach(n=> n.style.display = optShowPct ? '' : 'none');
       document.querySelectorAll('[data-optional="rvol"]').forEach(n=> n.style.display = optShowRVOL ? '' : 'none');
 
-      // Hydrate all cards immediately (so mini-charts are always visible)
-      const cards = Array.from(feed.querySelectorAll('.news-item'));
-      cards.forEach(card=>{
+      // hydrate every card (no lazy—always draw)
+      document.querySelectorAll('#news-feed .news-item').forEach(async (card)=>{
         const t = (card.querySelector('.mini-chart')?.dataset?.ticker||'').toUpperCase();
         if(!t || t==='GENERAL') return;
-        hydrateNewsCard(card, t);
+
+        if (optShowPct){
+          try{
+            const q = await getQuote(t);
+            if(q && typeof q.changePercent==='number'){
+              const val = card.querySelector('.val');
+              const arrow = card.querySelector('.arrow');
+              if (val){ val.textContent = `${q.changePercent>0?'+':''}${q.changePercent.toFixed(2)}%`; val.className = 'val ' + (q.changePercent>0?'up':'down'); }
+              if (arrow) arrow.textContent = q.changePercent>0 ? '↗' : '↘';
+            }
+          }catch{}
+        }
+        if (optShowRVOL){
+          try{
+            const rv = await getRVOL(t);
+            if (rv){
+              const node = card.querySelector('.rvol');
+              if (node) node.textContent = `RVOL ${rv.toFixed(2)}x`;
+            }
+          }catch{}
+        }
+        drawSparkline(card.querySelector('.mini-chart'), t);
       });
     }
 
@@ -576,7 +592,6 @@
         `;
       }).join('');
 
-      // draw charts if enabled; use last=1 fallback in drawSparkline()
       if (scanOptShowChart){
         grid.querySelectorAll('.mini-chart').forEach(slot=>{
           const t = slot.getAttribute('data-ticker');
@@ -812,23 +827,27 @@
     });
 
     // init filters UI
-    function initFiltersUI(){
-      renderFilterChecks();
-      document.getElementById('catChecks').addEventListener('change', (e)=>{
+    function renderFilterChecksInit(){
+      const wrap = document.getElementById('catChecks');
+      wrap.innerHTML = CATEGORIES.map(([val,label])=>`<label><input type="checkbox" value="${val}"/> ${label}</label>`).join('');
+      wrap.addEventListener('change', (e)=>{
         if(e.target && e.target.type==='checkbox'){
           const v = e.target.value;
           if(e.target.checked) selectedCats.add(v); else selectedCats.delete(v);
           updateFiltersCount();
         }
       });
+      updateFiltersCount();
     }
 
     // ---------- INIT ----------
     async function init(){
-      initFiltersUI();
+      renderFilterChecksInit();
       document.getElementById('news-feed').innerHTML = `<div class="loading">Fetching live financial news…</div>`;
       await fetchData();
       buildScanners();
+      // persist UI prefs now that controls exist
+      persistMetricPrefs();
     }
     init();
   </script>
