--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <!-- Disclaimer -->
     <div class="disclaimer">
-      <strong>Educational Purposes Only.</strong> The content on this site (including news, data, and any analysis) is provided for informational and educational purposes only and does not constitute investment, financial, or trading advice.
+      <strong>Educational Purposes Only.</strong> Market data may be delayed, inaccurate, or incomplete. Not investment advice.
     </div>
 
     <!-- Tabs -->
@@ -130,11 +130,10 @@
     <!-- NEWS -->
     <div id="view-news" class="panel">
       <div class="toolbar">
-        <!-- Filters popover (multi-select) -->
         <div class="popover" id="filtersPopover">
           <button class="filter-chip" id="filtersBtn">Filters <span class="meta" id="filtersCount">(All)</span></button>
           <div class="popover-panel">
-            <div class="checks" id="catChecks"><!-- injected by JS --></div>
+            <div class="checks" id="catChecks"></div>
             <div style="display:flex; gap:8px; justify-content:flex-end">
               <button class="btn" id="filtersClear">Clear</button>
               <button class="btn" id="filtersApply" style="background:var(--accent);border:1px solid rgba(255,255,255,.12);color:#fff">Apply</button>
@@ -232,11 +231,11 @@
     const RETAIN_DAYS = 7;
 
     // ---------- STATE ----------
-    let allNewsStore = new Map();  // id -> article
-    let newsData = [];             // sorted derived
+    let allNewsStore = new Map();
+    let newsData = [];
     let filteredNews = [];
-    const stockCache = new Map();  // ticker -> { changePercent, change, ts }
-    let selectedCats = new Set();  // multi-select categories
+    const stockCache = new Map();
+    let selectedCats = new Set();
     let watchlist = new Set();
 
     // optional metrics toggles (defaults)
@@ -344,14 +343,13 @@
       return m.volume / m.avgVolume;
     }
 
-    // S P A R K L I N E  (last session -> 5m -> daily)
+    // S P A R K L I N E
     async function drawSparkline(el, ticker){
       if (!el || !ticker || ticker === 'GENERAL' || !/^[A-Z]{1,5}$/.test(ticker)) { el.innerHTML=''; return; }
       try{
         let r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=180&last=1`);
         let payload = r.ok ? await r.json() : {candles:[]};
         let candles = payload.candles || [];
-
         if (candles.length < 2) {
           r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=5min&limit=180&last=1`);
           payload = r.ok ? await r.json() : {candles:[]};
@@ -362,7 +360,6 @@
           payload = r.ok ? await r.json() : {candles:[]};
           candles = payload.candles || [];
         }
-
         if (!Array.isArray(candles) || candles.length < 2) { el.innerHTML=''; return; }
 
         const closes = candles.map(c=>c.c);
@@ -395,12 +392,10 @@
       if(!selectedCats.size) span.textContent = '(All)';
       else span.textContent = `(${selectedCats.size} selected)`;
     }
-    function closeAllPopovers(e){
-      if(!e) return;
+    document.addEventListener('click', (e)=>{
       const pop = document.getElementById('filtersPopover');
       if (!pop.contains(e.target)) pop.classList.remove('open');
-    }
-    document.addEventListener('click', closeAllPopovers);
+    });
 
     // ---------- FETCH + APPLY ----------
     async function fetchData(){
@@ -438,7 +433,7 @@
       renderNews();
     }
 
-    // ---------- RENDER NEWS (always draw mini-charts) ----------
+    // ---------- RENDER NEWS ----------
     function renderNews(){
       const feed = document.getElementById('news-feed');
       if (!filteredNews.length){
@@ -475,7 +470,7 @@
       document.querySelectorAll('[data-optional="pct"]').forEach(n=> n.style.display = optShowPct ? '' : 'none');
       document.querySelectorAll('[data-optional="rvol"]').forEach(n=> n.style.display = optShowRVOL ? '' : 'none');
 
-      // hydrate every card (no lazy)
+      // hydrate cards (always draw mini-charts)
       document.querySelectorAll('#news-feed .news-item').forEach(async (card)=>{
         const t = (card.querySelector('.mini-chart')?.dataset?.ticker||'').toUpperCase();
         if(!t || t==='GENERAL') return;
@@ -526,7 +521,6 @@
         rows.push({ ticker:t, pct, mentions:stats.get(t).mentions, rvol, recency:rec, score });
       }
 
-      // presets
       const preset = document.getElementById('scannerPreset').value;
       if (preset==='big_movers') rows.sort((a,b)=> Math.abs(b.pct)-Math.abs(a.pct));
       else if (preset==='rvol') rows.sort((a,b)=> b.rvol-a.rvol);
@@ -643,12 +637,8 @@
       return out;
     }
 
-    function getIndPrefs(){
-      try { return JSON.parse(localStorage.getItem('indPrefsV1')||'{}'); } catch { return {}; }
-    }
-    function setIndPrefs(obj){
-      try { localStorage.setItem('indPrefsV1', JSON.stringify(obj||{})); } catch {}
-    }
+    function getIndPrefs(){ try { return JSON.parse(localStorage.getItem('indPrefsV1')||'{}'); } catch { return {}; } }
+    function setIndPrefs(obj){ try { localStorage.setItem('indPrefsV1', JSON.stringify(obj||{})); } catch {} }
 
     async function openChart(ticker){
       const modal = document.getElementById('chartModal');
@@ -657,7 +647,6 @@
       title.textContent = `${ticker} — intraday (1m)`;
       body.innerHTML = '';
 
-      // try last session, then 5m, then daily (same ladder as sparkline)
       let r = await fetch(`/api/ohlc?ticker=${encodeURIComponent(ticker)}&interval=1min&limit=300&last=1`);
       let payload = r.ok ? await r.json() : {candles:[]};
       let candles = payload.candles||[];
@@ -689,7 +678,6 @@
       volSeries.setData(data.map(k=>({ time:k.time, value:k.volume, color: k.close>=k.open?'#24e39c':'#ff5b6e' })));
       chart.priceScale('').applyOptions({ scaleMargins:{ top:0.8, bottom:0 } });
 
-      // indicators with saved prefs
       let vwap=null,sma20=null,ema9=null,rsiPane=null;
       const checks = Array.from(document.querySelectorAll('.modal .ind'));
       const pref = getIndPrefs(); checks.forEach(ch=> ch.checked = !!pref[ch.value] || ch.checked);
@@ -724,13 +712,13 @@
       if(!r.ok) throw new Error(`HTTP ${r.status}`); return r.json();
     }
     document.getElementById('donate-once').addEventListener('click', async ()=>{
-      try{ const { url } = await postJSON('/api/checkout', { mode:'payment' }); if(url) window.location.href = url; }catch(e){ alert('Unable to start checkout.'); }
+      try{ const { url } = await postJSON('/api/checkout', { mode:'payment' }); if (url) window.location.href = url; }catch(e){ alert('Unable to start checkout.'); }
     });
     document.getElementById('donate-monthly').addEventListener('click', async ()=>{
-      try{ const { url } = await postJSON('/api/checkout', { mode:'subscription' }); if(url) window.location.href = url; }catch(e){ alert('Unable to start checkout.'); }
+      try{ const { url } = await postJSON('/api/checkout', { mode:'subscription' }); if (url) window.location.href = url; }catch(e){ alert('Unable to start checkout.'); }
     });
     document.getElementById('manage-subscription').addEventListener('click', async ()=>{
-      try{ const { url } = await postJSON('/api/portal', {}); ifurl) window.location.href = url; }catch(e){ alert('Unable to open portal.'); }
+      try{ const { url } = await postJSON('/api/portal', {}); if (url) window.location.href = url; }catch(e){ alert('Unable to open portal.'); }
     });
 
     // ---------- EVENTS ----------
@@ -762,13 +750,15 @@
       }
     });
 
-    // filters logic
+    // filters buttons
     document.getElementById('filtersClear').addEventListener('click', ()=>{ selectedCats.clear(); renderFilterChecks(); });
     document.getElementById('filtersApply').addEventListener('click', ()=>{ document.getElementById('filtersPopover').classList.remove('open'); applyFilter(); });
+
+    // search / refresh
     document.getElementById('run').addEventListener('click', ()=>fetchData());
     document.getElementById('manualRefresh').addEventListener('click', ()=>fetchData());
 
-    // optional metrics toggles hook-up
+    // optional metrics toggles
     const showPctBox = document.getElementById('showPct');
     const showRVOLBox = document.getElementById('showRVOL');
     const scanShowRVOLBox = document.getElementById('scanShowRVOL');
@@ -794,7 +784,7 @@
     autoBox.addEventListener('change', ()=> setAutoRefresh(autoBox.checked));
     setAutoRefresh(autoBox.checked);
 
-    // scanner + watchlist controls
+    // scanner & watchlist
     document.getElementById('rescore').addEventListener('click', buildScanners);
     document.getElementById('wlAddBtn').addEventListener('click', ()=>{
       const v = (document.getElementById('wlAdd').value||'').trim().toUpperCase();
