--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
       const limit = 50;
       
       try {
-        // Call the real scanner API for comprehensive data
-        const response = await fetch(`/api/real-scanner?preset=${preset}&limit=${limit}`);
+        // Call the all-stocks scanner API for comprehensive data
+        const response = await fetch(`/api/all-stocks-scanner?preset=${preset}&limit=${limit}`);
         const data = await response.json();
         
         if (data.success && data.data.stocks) {
