LIVE: Added 30-second auto-refresh for news

--- a/index.html
+++ b/index.html
@@ -1038,6 +1038,9 @@
     
     // Load initial data
     setTimeout(fetchData, 100);
+    
+    // Auto-refresh news every 30 seconds
+    setInterval(fetchData, 30000);
   </script>
 </body>
 </html>
