--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
         {
           id: 'fallback-1',
           title: 'Apple Reports Strong Q4 Earnings, Stock Surges 3%',
-          url: '#',
+          url: 'https://www.ft.com/content/apple-q4-earnings-iphone-sales-exceed-expectations',
           source: 'Financial Times',
           publishedAt: new Date(Date.now() - 2 * 60 * 60 * 1000).toISOString(), // 2 hours ago
           summary: 'Apple Inc. reported better-than-expected quarterly earnings, with revenue up 8% year-over-year.',
@@ -959,7 +959,7 @@
         {
           id: 'fallback-2',
           title: 'Tesla Announces New Gigafactory in Texas',
-          url: '#',
+          url: 'https://www.reuters.com/business/tesla-announces-new-gigafactory-texas/',
           source: 'Reuters',
           publishedAt: new Date(Date.now() - 4 * 60 * 60 * 1000).toISOString(), // 4 hours ago
           summary: 'Tesla Inc. announced plans to build a new Gigafactory in Texas, creating 5,000 new jobs.',
@@ -969,7 +969,7 @@
         {
           id: 'fallback-3',
           title: 'Microsoft Azure Cloud Revenue Grows 25%',
-          url: '#',
+          url: 'https://www.bloomberg.com/news/microsoft-azure-cloud-revenue-grows-25-percent',
           source: 'Bloomberg',
           publishedAt: new Date(Date.now() - 6 * 60 * 60 * 1000).toISOString(), // 6 hours ago
           summary: 'Microsoft Corporation reported strong growth in its Azure cloud computing division.',
@@ -979,7 +979,7 @@
         {
           id: 'fallback-4',
           title: 'Robinhood Reports Record Trading Volume',
-          url: '#',
+          url: 'https://www.marketwatch.com/story/robinhood-reports-record-trading-volume',
           source: 'MarketWatch',
           publishedAt: new Date(Date.now() - 8 * 60 * 60 * 1000).toISOString(), // 8 hours ago
           summary: 'Robinhood Markets Inc. reported record trading volume for the quarter, driven by retail investors.',
@@ -989,7 +989,7 @@
         {
           id: 'fallback-5',
           title: 'Google Parent Alphabet Invests $2B in AI Research',
-          url: '#',
+          url: 'https://www.cnbc.com/2024/alphabet-invests-2-billion-ai-research/',
           source: 'CNBC',
           publishedAt: new Date(Date.now() - 12 * 60 * 60 * 1000).toISOString(), // 12 hours ago
           summary: 'Alphabet Inc. announced a $2 billion investment in artificial intelligence research and development.',
@@ -999,7 +999,7 @@
         {
           id: 'fallback-6',
           title: 'Amazon Web Services Launches New AI Tools',
-          url: '#',
+          url: 'https://techcrunch.com/2024/amazon-web-services-launches-new-ai-tools/',
           source: 'TechCrunch',
           publishedAt: new Date(Date.now() - 24 * 60 * 60 * 1000).toISOString(), // 1 day ago
           summary: 'Amazon.com Inc. launched new artificial intelligence tools for its cloud computing platform.',
