CRITICAL FIX: Removed hardcoded display:none from scanner panel - scanner tab should now work

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
 
     <!-- SCANNERS -->
-    <div id="view-scanners" class="panel" style="display:none">
+    <div id="view-scanners" class="panel">
       <div class="toolbar">
         <select class="select" id="scannerPreset">
           <option value="momentum">🚀 High Momentum</option>
